Closed Bug 642979 Opened 14 years ago Closed 14 years ago

TI: Assertion failure: INT_FITS_IN_JSID(i), at jsapi.h:381

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Unassigned)

References

Details

(Keywords: assertion, testcase, Whiteboard: fixed-in-jaegermonkey)

The following test case (run with -n -a -m) asserts on TI tip, tested on 64 bit: var array = new Array(0x80000000); array.shift();
array_shift should use SuppressDeletedIndexProperties, not SuppressDeletedProperty (this does not show up in TM as it walks a different path on this call). http://hg.mozilla.org/projects/jaegermonkey/rev/b6cae337d38d
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-jaegermonkey
You need to log in before you can comment on or make changes to this bug.