[INFER] Avoid INT_TO_JSID overflow when deleting element in array_shift, bug 642979.